--- a/app/src/main/res/layout/activity_servicio.xml
+++ b/app/src/main/res/layout/activity_servicio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,7 +39,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
-            android:contentDescription="Buscar"
+            android:contentDescription="@string/cd_buscar"
             android:onClick="BuscarServicio"
             android:src="@drawable/ic_buscar" />
     </LinearLayout>
@@ -65,7 +66,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Agregar"
+            android:contentDescription="@string/cd_agregar"
             android:onClick="InsertarServicio"
             android:src="@drawable/ic_agregar" />
 
@@ -75,7 +76,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Editar"
+            android:contentDescription="@string/cd_editar"
             android:onClick="UpdateServicio"
             android:src="@drawable/ic_editar" />
 
@@ -85,7 +86,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Eliminar"
+            android:contentDescription="@string/cd_eliminar"
             android:onClick="EliminarServicio"
             android:src="@drawable/ic_eliminar" />
 
@@ -95,7 +96,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Salir"
+            android:contentDescription="@string/cd_salir"
             android:onClick="regresarServicio"
             android:src="@drawable/ic_regresar" />
     </LinearLayout>
