--- a/app/src/main/res/layout/activity_updatecliente.xml
+++ b/app/src/main/res/layout/activity_updatecliente.xml
@@ -1,74 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
 
+    <!-- Campo Cédula (deshabilitado) -->
     <EditText
         android:id="@+id/txtCedulaCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Cédula"
+        android:hint="@string/hint_cedula_clientee"
         android:enabled="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Campo Nombre -->
     <EditText
         android:id="@+id/txtNombreCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nombre"
+        android:hint="@string/hint_nombre"
         app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Campo Apellidos -->
     <EditText
         android:id="@+id/txtApellidosCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Apellidos"
+        android:hint="@string/hint_apellidos"
         app:layout_constraintTop_toBottomOf="@id/txtNombreCliente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Campo Teléfono -->
     <EditText
         android:id="@+id/txtTelefonoCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Teléfono"
+        android:hint="@string/hint_telefono"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@id/txtApellidosCliente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Campo Correo -->
     <EditText
         android:id="@+id/txtCorreoCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Correo"
+        android:hint="@string/hint_correo"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/txtTelefonoCliente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <!-- Botón Actualizar -->
     <Button
         android:id="@+id/btnActualizarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btn_guardar"
         android:onClick="ActualizarCliente"
-        android:text="Actualizar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtCorreoCliente" />
+        app:layout_constraintTop_toBottomOf="@id/txtCorreoCliente"/>
 
+    <!-- Botón Regresar -->
     <Button
         android:id="@+id/btnRegresarCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btn_regresar"
         android:onClick="RegresarCliente"
-        android:text="Regresar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtCorreoCliente" />
+        app:layout_constraintTop_toBottomOf="@id/txtCorreoCliente"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
