--- a/app/src/main/res/layout/activity_carro.xml
+++ b/app/src/main/res/layout/activity_carro.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="Carros"
+        android:text="@string/titulo_carros"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Buscar por placa"
+            android:hint="@string/hint_buscar_placa"
             android:padding="10dp" />
 
         <ImageButton
@@ -38,7 +38,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
-            android:contentDescription="Buscar"
+            android:contentDescription="@string/cd_buscar"
             android:onClick="Buscar"
             android:src="@drawable/ic_buscar" />
     </LinearLayout>
@@ -51,6 +51,7 @@
         android:layout_weight="1"
         android:dividerHeight="10dp" />
 
+    <!-- Botones inferiores con iconos -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,7 +65,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Agregar"
+            android:contentDescription="@string/cd_agregar"
             android:onClick="Insertar"
             android:src="@drawable/ic_agregar" />
 
@@ -74,7 +75,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Editar"
+            android:contentDescription="@string/cd_editar"
             android:onClick="Update"
             android:src="@drawable/ic_editar" />
 
@@ -84,7 +85,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Eliminar"
+            android:contentDescription="@string/cd_eliminar"
             android:onClick="Eliminar"
             android:src="@drawable/ic_eliminar" />
 
@@ -94,9 +95,10 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Salir"
+            android:contentDescription="@string/cd_salir"
             android:onClick="regresar"
             android:src="@drawable/ic_regresar" />
     </LinearLayout>
 
 </LinearLayout>
+
