--- a/app/src/main/res/layout/activity_empleado.xml
+++ b/app/src/main/res/layout/activity_empleado.xml
@@ -38,7 +38,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
-            android:contentDescription="Buscar"
+            android:contentDescription="@string/cd_buscar"
             android:onClick="Buscar"
             android:src="@drawable/ic_buscar" />
     </LinearLayout>
@@ -51,6 +51,7 @@
         android:layout_weight="1"
         android:dividerHeight="10dp" />
 
+    <!-- Botones inferiores con iconos -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,7 +65,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Agregar"
+            android:contentDescription="@string/cd_agregar"
             android:onClick="Insertar"
             android:src="@drawable/ic_agregar" />
 
@@ -74,7 +75,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Editar"
+            android:contentDescription="@string/cd_editar"
             android:onClick="UpdateEmpleado"
             android:src="@drawable/ic_editar" />
 
@@ -84,7 +85,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Eliminar"
+            android:contentDescription="@string/cd_eliminar"
             android:onClick="Eliminar"
             android:src="@drawable/ic_eliminar" />
 
@@ -94,7 +95,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Salir"
+            android:contentDescription="@string/cd_salir"
             android:onClick="regresar"
             android:src="@drawable/ic_regresar" />
     </LinearLayout>
