--- a/app/src/main/res/layout/activity_insertcarro.xml
+++ b/app/src/main/res/layout/activity_insertcarro.xml
@@ -1,72 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
 
-
     <EditText
         android:id="@+id/txtPlaca"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Placa"
+        android:hint="@string/hint_placa"
         android:inputType="text"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
     <EditText
         android:id="@+id/txtModelo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Modelo"
+        android:hint="@string/hint_modelo"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/txtPlaca"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
     <EditText
         android:id="@+id/txtAnio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Año"
+        android:hint="@string/hint_anio"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/txtModelo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
     <EditText
         android:id="@+id/txtCedulaCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Cédula Cliente"
+        android:hint="@string/hint_cedula_cliente"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/txtAnio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
     <Button
         android:id="@+id/btnGuardarCarro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Guardar"
+        android:text="@string/btn_guardar"
         android:onClick="Guardar"
         android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
         app:layout_constraintStart_toStartOf="parent"/>
 
-
     <Button
         android:id="@+id/btnRegresarCarro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Regresar"
+        android:text="@string/btn_regresar"
         android:onClick="Regresar"
         android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
