--- a/app/src/main/res/layout/activity_updatecarro.xml
+++ b/app/src/main/res/layout/activity_updatecarro.xml
@@ -1,69 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
 
-
+    <!-- Campo Placa (deshabilitado) -->
     <EditText
         android:id="@+id/txtPlaca"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Placa"
+        android:hint="@string/hint_placa"
         android:enabled="false"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
+    <!-- Campo Modelo -->
     <EditText
         android:id="@+id/txtModelo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Modelo"
+        android:hint="@string/hint_modelo"
         app:layout_constraintTop_toBottomOf="@id/txtPlaca"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
+    <!-- Campo Año -->
     <EditText
         android:id="@+id/txtAnio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Año"
+        android:hint="@string/hint_anio"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/txtModelo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
+    <!-- Campo Cédula Cliente -->
     <EditText
         android:id="@+id/txtCedulaCliente"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Cédula Cliente"
+        android:hint="@string/hint_cedula_cliente"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@id/txtAnio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-
+    <!-- Botón Actualizar -->
     <Button
         android:id="@+id/btnActualizarCarro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Actualizar"
+        android:text="@string/btn_guardar"
         android:onClick="Actualizar"
         app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
         app:layout_constraintStart_toStartOf="parent"/>
 
-
+    <!-- Botón Regresar -->
     <Button
         android:id="@+id/btnRegresarCarro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Regresar"
+        android:text="@string/btn_regresar"
         android:onClick="Regresar"
         app:layout_constraintTop_toBottomOf="@id/txtCedulaCliente"
         app:layout_constraintEnd_toEndOf="parent"/>
