--- a/app/src/main/res/layout/activity_updateservicio.xml
+++ b/app/src/main/res/layout/activity_updateservicio.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,22 +17,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Campo Nombre -->
+    <!-- Campo Nombre del Servicio -->
     <EditText
         android:id="@+id/txtNombreServicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nombre del servicio"
+        android:hint="@string/hint_nombre_servicio"
         app:layout_constraintTop_toBottomOf="@id/txtIdServicio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Campo Precio -->
+    <!-- Campo Precio del Servicio -->
     <EditText
         android:id="@+id/txtPrecioServicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Precio"
+        android:hint="@string/hint_precio_servicio"
         android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/txtNombreServicio"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +43,8 @@
         android:id="@+id/btnActualizarServicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btn_guardar"
         android:onClick="ActualizarServicio"
-        android:text="Actualizar"
         app:layout_constraintTop_toBottomOf="@id/txtPrecioServicio"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -52,8 +53,8 @@
         android:id="@+id/btnRegresarServicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/btn_regresar"
         android:onClick="RegresarServicio"
-        android:text="Regresar"
         app:layout_constraintTop_toBottomOf="@id/txtPrecioServicio"
         app:layout_constraintEnd_toEndOf="parent"/>
 
