--- a/app/src/main/res/layout/activity_factura.xml
+++ b/app/src/main/res/layout/activity_factura.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="Facturas"
+        android:text="@string/titulo_facturas"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -29,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="Buscar por idFactura"
+            android:hint="@string/hint_buscar_factura"
             android:padding="10dp"
             android:inputType="number" />
 
@@ -39,7 +39,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:background="@android:color/transparent"
-            android:contentDescription="Buscar"
+            android:contentDescription="@string/cd_buscar"
             android:onClick="Buscar"
             android:src="@drawable/ic_buscar" />
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Agregar"
+            android:contentDescription="@string/cd_agregar"
             android:onClick="Insertar"
             android:src="@drawable/ic_agregar" />
 
@@ -76,7 +76,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Eliminar"
+            android:contentDescription="@string/cd_eliminar"
             android:onClick="Eliminar"
             android:src="@drawable/ic_eliminar" />
 
@@ -86,7 +86,7 @@
             android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:contentDescription="Salir"
+            android:contentDescription="@string/cd_salir"
             android:onClick="regresar"
             android:src="@drawable/ic_regresar" />
     </LinearLayout>
