--- a/app/src/main/res/layout/activity_insertempleado.xml
+++ b/app/src/main/res/layout/activity_insertempleado.xml
@@ -86,9 +86,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="24dp"
-        android:onClick="Regresar"
+        android:onClick="RegresarListEmpleado"
         android:text="@string/btn_regresar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtPuesto"/>
+        app:layout_constraintTop_toBottomOf="@id/txtPuesto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
